@@ -1,5 +1,8 @@
 1688.	[bug]		LDFLAGS was not supported.
 
+1686.	[bug]		Named sent a extraneous NOTIFY when it received a
+			redundant UPDATE request. [RT #11943]
+
 	--- 9.2.4rc6 released ---
 
 1685.	[bug]		Change #1679 loop tests weren't quite right.
